--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/anumraza/SScore-Keeper"
+    "url": "https://anumraza.github.io/Score-Keeper"
   }
 }
